# rust-auth-service

./: .dockerignore  .gitignore  Cargo.toml
deployments/cloudbuild/: cloudbuild.yaml
deployments/docker/: Dockerfile  docker-compose.yaml
migrations/: 20241127061055_users_table.sql  20241130062022_seed_users.sql
src/: config.rs  lib.rs  main.rs
src/api/: health_check.rs  mod.rs  user.rs
src/application/repositories/: user_repository.rs
src/application/use_cases/: user.rs
src/domain/: user.rs
src/dto/: error.rs  mod.rs  user_dto.rs
src/infrastructure/: mod.rs  postgres_database.rs
src/infrastructure/repositories/: mod.rs  postgres_user_repo.rs
src/util/: logging.rs  mod.rs  pwd.rs  tracing.rs
src/utils/: logging.rs  mod.rs  tracing.rs
