[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
config = "0.14.1"
env_logger = "0.11.5"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full", "tokio-macros"] }
tracing = "0.1.40"
tracing-loki = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
url = "2.5.3"
